--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,41 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-couchbase</artifactId>
+      <!-- -->
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-couchbase</artifactId>
+        </exclusion>
+      </exclusions>
+      <!-- -->
+    </dependency>
+    <!-- override with collection support that was installed locally -->
+    <!-- if local-build is stale, then "mvn install" again -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-couchbase</artifactId>
+      <version>4.3.0</version>
+    </dependency>
+    <!-- Gson to json-stringify objects -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.7</version>
+    </dependency>
+
+    <!-- the couchbase java sdk -->
+    <dependency>
+      <groupId>com.couchbase.client</groupId>
+      <artifactId>java-client</artifactId>
+      <version>3.1.5</version>
+    </dependency>
+
+    <!-- Include Java EE API modules no longer in default Java 11 -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.2.11</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
