implementation for metrics started

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,17 +2,18 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     listener:
-      concurrency: 10
+      concurrency: 1
       ack-mode: manual_immediate
     producer:
-      topic: topic-10p
+      topic: metrics
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       retries: 3
       acks: 1
     consumer:
       groupId: test-group-2
-      topic: topic-10p
+      auto-offset-reset: earliest
+      topic: metrics
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
