--- a/pom.xml
+++ b/pom.xml
@@ -36,18 +36,18 @@
       <version>4.3.0</version>
     </dependency>
     <!-- Gson to json-stringify objects -->
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.7</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.google.code.gson</groupId>-->
+<!--      <artifactId>gson</artifactId>-->
+<!--      <version>2.8.7</version>-->
+<!--    </dependency>-->
 
-    <!-- the couchbase java sdk -->
-    <dependency>
-      <groupId>com.couchbase.client</groupId>
-      <artifactId>java-client</artifactId>
-      <version>3.1.5</version>
-    </dependency>
+<!--    &lt;!&ndash; the couchbase java sdk &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>com.couchbase.client</groupId>-->
+<!--      <artifactId>java-client</artifactId>-->
+<!--      <version>3.1.5</version>-->
+<!--    </dependency>-->
 
     <!-- Include Java EE API modules no longer in default Java 11 -->
     <dependency>
@@ -82,6 +82,11 @@
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
     </dependency>
   </dependencies>
 
